--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <main class="app-main">
-  <h1 class="mat-h1">{{ title }}</h1>
+  <h1 class="mat-display-2 text-align-center">{{ title }}</h1>
 
-  <mat-card>
-    <app-todo-list></app-todo-list>
-  </mat-card>
+  <app-todo-list></app-todo-list>
 </main>
