--- a/src/app/todo/list-item/list-item.component.scss
+++ b/src/app/todo/list-item/list-item.component.scss
@@ -11,8 +11,18 @@
   }
 }
 
-mat-list-item.is-done {
-  opacity: 0.3;
+mat-list-item {
+  &.is-done {
+    opacity: 0.3;
+  }
+
+  &.is-editing {
+    padding: 1rem 0;
+  }
+}
+
+.item-title {
+  cursor: default;
 }
 
 ul.item-meta {
