--- a/src/app/todo/list-item/list-item.component.html
+++ b/src/app/todo/list-item/list-item.component.html
@@ -2,7 +2,7 @@
   <h3
     class="item-title"
     matLine
-    matTooltip="Double click on edit"
+    matTooltip="Double click to edit"
     *ngIf="!editMode"
     (dblclick)="onItemTitleDblClick()"
   >
@@ -27,7 +27,7 @@
           matInput
           [formControl]="itemLabelControl"
           #itemTitleInput
-          (keyup)="onItemLabelInputKeyup($event)"
+          (keyup.escape)="editMode = false"
         />
       </mat-form-field>
     </form>
