--- a/src/app/todo/list-item/list-item.component.html
+++ b/src/app/todo/list-item/list-item.component.html
@@ -1,3 +1,11 @@
+<div class="selection" *ngIf="!editMode">
+  <mat-checkbox
+    class="example-margin"
+    [checked]="selected"
+    (change)="onSelectionCheckboxChange($event)"
+  ></mat-checkbox>
+</div>
+
 <mat-list-item [ngClass]="{ 'is-done': item.isDone, 'is-editing': editMode }">
   <h3
     class="item-title"
@@ -29,6 +37,8 @@
           #itemTitleInput
           (keyup.escape)="editMode = false"
         />
+
+        <mat-hint>Press escape to cancel</mat-hint>
       </mat-form-field>
     </form>
   </ng-container>
